kubernetes/apps/bazarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
  namespace: bazarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: bazarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: bazarr
    spec:
      containers:
        - name: bazarr
          image: ghcr.io/linuxserver/bazarr:v1.6.2-ls366
          readinessProbe:
            tcpSocket:
              port: 6767
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 6767
            periodSeconds: 30
            failureThreshold: 5
          resources:
            requests:
              cpu: 50m
              memory: 256Mi
            limits:
              memory: 1Gi
          ports:
            - name: http
              containerPort: 6767
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /data/movies
              subPath: movies
            - name: media
              mountPath: /data/tvshows
              subPath: tvshows
            - name: media
              mountPath: /data/cartons
              subPath: cartons
            - name: media
              mountPath: /data/cartons-tvshows
              subPath: cartons-tvshows
            - name: media
              mountPath: /data/anime
              subPath: anime
            - name: media
              mountPath: /data/marijana
              subPath: marijana
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: bazarr-config
        - name: media
          persistentVolumeClaim:
            claimName: bazarr-media
