kubernetes/apps/bazarr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bazarr
  namespace: bazarr
spec:
  parentRefs:
    - name: main
      namespace: network
  hostnames:
    - "bazarr.zlaya.tech"
  rules:
    - backendRefs:
        - name: bazarr
          port: 6767
